--- a/TCMAPI/TCMAPI.csproj
+++ b/TCMAPI/TCMAPI.csproj
@@ -6,6 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commands\**" />
+    <Compile Remove="Resource\**" />
+    <Content Remove="Commands\**" />
+    <Content Remove="Resource\**" />
+    <EmbeddedResource Remove="Commands\**" />
+    <EmbeddedResource Remove="Resource\**" />
+    <None Remove="Commands\**" />
+    <None Remove="Resource\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -20,11 +31,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.8" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Resource\" />
   </ItemGroup>
 
 
