--- a/TCMAPI/appsettings.json
+++ b/TCMAPI/appsettings.json
@@ -18,7 +18,8 @@
     "LinkRichMenuToUser": "https://api.line.me/v2/bot/user/{0}/richmenu/{1}",
     "PushFlexMessageUrl": "https://api.line.me/v2/bot/message/push",
     "SetDefaultMenu": "https://api.line.me/v2/bot/user/all/richmenu/{0}",
-    "UploadImageUrl": "https://api-data.line.me/v2/bot/richmenu/{0}/content"
+    "UploadImageUrl": "https://api-data.line.me/v2/bot/richmenu/{0}/content",
+    "PushMessageUrl": "https://api.line.me/v2/bot/message/multicast"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
